# ImaGene-forIPOL

./: .travis.yml  CMakeLists.txt  DONE  FindBOOST.cmake  FindGMP.cmake  FindGMPXX.cmake  INSTALL  README  TODO
demoIPOL/: CMakeLists.txt  meaningfulScaleEstim.cxx
examples/: CMakeLists.txt  exampleExportNoiseLevels.cxx  exampleMultiScaleProfile.cxx  exampleNormalEstimation.cxx  normalEstimationPerSurfel.cxx  normalEstimationPerVoxel.cxx  tcover-image.cxx  tcover3d.cxx
include/ImaGene/arithmetic/: COBAPlaneRecognition.h  COBAPlaneRecognition.ih  COBAPlaneRecognitionWithSet.h  COBAPlaneRecognitionWithSet.ih  ConvexIntegerPolygon.h  ConvexIntegerPolygon.ih  IntegerComputer.h  IntegerComputer.ih
include/ImaGene/helper/: MultiscaleProfile.h  (+1 more)
src/: CMakeLists.txt
src/arithmetic/: COBAPlaneRecognition.cxx  COBAPlaneRecognitionWithSet.cxx  ConvexIntegerPolygon.cxx  IntegerComputer.cxx
src/helper/: MultiscaleProfile.cxx  ScaleProfile.cxx
src/mathutils/: SimpleLinearRegression.cxx
src/planeRecognition/: COBA.cxx  Z2.cxx  Z3.cxx  convexe.cxx  liste.cxx  planeRecognitionOnSurfaces.cxx  plane_generator.cxx  utils.cxx
src/planes/: CDigitalGraph.cxx  CompletedDigitalSurfaceGraph.cxx  DigitalImageGraph.cxx  DigitalMidSurfaceGraph.cxx  DigitalSurfaceGraph.cxx  IsotropicExpander.cxx  IsotropicExpanderWithSet.cxx  NuThickDisk.cxx  TangentialCover.cxx  TangentialCoverDecomposition.cxx  TangentialCoverHierarchy.cxx
tests/: CMakeLists.txt  test_IntegerComputer.cxx  test_Math.cxx  test_Tangent.cxx
tests/TestPAMI/: displayBoxes.cxx  displayFlatCurved.cxx  displayNoise.cxx
(+31 files in other folders)
